fix(ie11): make it work on ie11

--- a/src/components/LoadingScreen/styles.less
+++ b/src/components/LoadingScreen/styles.less
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   
   position: absolute;
   top: 0;
